--- a/CPP_module00/ex01/Makefile
+++ b/CPP_module00/ex01/Makefile
@@ -6,26 +6,28 @@
 #    By: cdapurif <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/11 18:21:08 by cdapurif          #+#    #+#              #
-#    Updated: 2022/01/12 14:17:33 by cdapurif         ###   ########.fr        #
+#    Updated: 2022/01/13 15:30:33 by cdapurif         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = phonebook
 
-SRCS = phonebook.cpp
+SRCS = main.cpp	\
+       PhoneBook.class.cpp	\
+       Contact.class.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
-CC = clang++
+CXX = clang++
 
-CFLAGS = -Wall -Wextra -Werror
+CXXFLAGS = -Wall -Wextra -Werror
 
 RM = rm -f
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
 clean:
 	$(RM) $(OBJS)
