--- a/CPP01/ex05/Makefile
+++ b/CPP01/ex05/Makefile
@@ -6,13 +6,14 @@
 #    By: cdapurif <cdapurif@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/17 16:19:27 by cdapurif          #+#    #+#              #
-#    Updated: 2022/01/19 16:54:01 by cdapurif         ###   ########.fr        #
+#    Updated: 2022/01/19 21:43:38 by cdapurif         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = Karen2.0
 
-SRCS = main.cpp
+SRCS = main.cpp	\
+		Karen.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
