--- a/CPP06/ex00/Makefile
+++ b/CPP06/ex00/Makefile
@@ -6,11 +6,11 @@
 #    By: cdapurif <cdapurif@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/17 16:19:27 by cdapurif          #+#    #+#              #
-#    Updated: 2022/01/30 14:20:44 by cdapurif         ###   ########.fr        #
+#    Updated: 2022/01/31 13:20:40 by cdapurif         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = converter
+NAME = convert
 
 SRCS = main.cpp	\
 		Convert.cpp
